--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
+    "react-payment-inputs": "^1.2.0",
+    "react-router-dom": "^7.7.1",
+    "react-svg-credit-card-payment-icons": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -25,6 +31,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-payment-inputs": "^1.1.4",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
